hphp/hack/test/typecheck/const_attribute/const_with_non_const_parent.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class C {}
<<__Const>> class D extends C {}
